# resvg

./: .gitignore
.github/workflows/: tagged-release.yml  test.yml  viewsvg-release.yml
tools/ViewSVG/: CMakeLists.txt
tools/ViewSVG/qml/: CMakeLists.txt  Main.qml  SvgViewer.qml
tools/ViewSVG/src/: main.cpp  svgrenderer.cpp  svgrenderer.hpp
tools/viewsvg/: CMakeLists.txt  Makefile
tools/viewsvg/cmake/: compilers.cmake  config.cmake  env.cmake  functions.cmake  linux.cmake  macos.cmake  vars.cmake  windows.cmake
tools/viewsvg/cmake/templates/: application.desktop.in  post_install_linux.cmake.in  post_install_macos.cmake.in  post_install_windows.cmake.in  run_linuxdeploy.sh.in
tools/viewsvg/qml/: CMakeLists.txt  Main.qml  SvgViewer.qml
tools/viewsvg/src/: main.cpp  svgrenderer.cpp  svgrenderer.hpp
